--- a/index.html
+++ b/index.html
@@ -210,9 +210,95 @@
               </div>
             </div>
           </div>
-          <div class="mt-3 flex gap-4">
-            <img src="/image/Block.png" class="w-[550px]" alt="" />
-            <img src="/image/Block8.png" alt="" />
+          <div
+            class="mt-3 flex gap-4 bg-gray-100 w-[620px] pl-4 py-3 rounded-lg px-2"
+          >
+            <div class="">
+              <div class="flex gap-4 mt-5">
+                <h1 class="font-bold">Total Users</h1>
+                <h1 class="text-gray-500">Total Projects</h1>
+                <h1 class="text-gray-500">Operating Status &#9475;</h1>
+                <h1>&#8226; Current Week</h1>
+                <h1>&#8226; Previous Week</h1>
+              </div>
+              <div class="mt-4">
+                <div class="flex gap-3 mt-5">
+                  <h1 class="text-gray-500">30M</h1>
+                  <h1 class="bg-gray-300 w-[550px] h-[1px] mt-3"></h1>
+                </div>
+                <div class="flex gap-3 mt-5">
+                  <h1 class="text-gray-500">20M</h1>
+                  <h1 class="bg-gray-300 w-[550px] h-[1px] mt-3"></h1>
+                </div>
+                <div class="flex gap-3 mt-5">
+                  <h1 class="text-gray-500">10M</h1>
+                  <h1 class="bg-gray-300 w-[550px] h-[1px] mt-3"></h1>
+                </div>
+                <div class="mt-5">
+                  <h1 class="text-gray-500">0</h1>
+                </div>
+                <hr class="w-[540px] ml-5 mt-4 text-gray-500" />
+                <div>
+                  <div class="flex gap-[50px] text-gray-500 mt-3 ml-14">
+                    <h1>Jan</h1>
+                    <h1>Feb</h1>
+                    <h1>Mar</h1>
+                    <h1>Apr</h1>
+                    <h1>May</h1>
+                    <h1>Jun</h1>
+                    <h1>Jul</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="bg-gray-100 w-[200px] rounded ml-3 py-3 px-2 -mt-2">
+              <div class="mt-2">
+                <div>
+                  <h1 class="font-bold">Traffic Website</h1>
+                </div>
+
+                <div class="mt-3 flex gap-3">
+                  <h1 class="">Google</h1>
+                  <h1
+                    class="w-[100px] mt-2 bg-gray-300 h-[10px] rounded-lg"
+                  ></h1>
+                </div>
+                <div class="mt-3 flex gap-2">
+                  <h1 class="">YouTube</h1>
+                  <h1
+                    class="w-[50px] mt-2 bg-gray-300 h-[10px] rounded-lg"
+                  ></h1>
+                </div>
+                <div class="mt-3 flex gap-3">
+                  <h1 class="">Instagram</h1>
+                  <h1 class="w-[89px] mt-2 bg-black h-[10px] rounded-lg"></h1>
+                </div>
+                <div class="mt-3 flex gap-3">
+                  <h1 class="">Pinterest</h1>
+                  <h1
+                    class="w-[40px] mt-2 bg-gray-300 h-[10px] rounded-lg"
+                  ></h1>
+                </div>
+                <div class="mt-3 flex gap-3">
+                  <h1 class="">Facebook</h1>
+                  <h1
+                    class="w-[89px] mt-2 bg-gray-300 h-[10px] rounded-lg"
+                  ></h1>
+                </div>
+                <div class="mt-3 flex gap-3">
+                  <h1 class="">Twitter</h1>
+                  <h1
+                    class="w-[45px] mt-2 bg-gray-300 h-[10px] rounded-lg"
+                  ></h1>
+                </div>
+                <div class="mt-3 flex gap-3">
+                  <h1 class="">Tumbir</h1>
+                  <h1
+                    class="w-[84px] mt-2 bg-gray-300 h-[10px] rounded-lg"
+                  ></h1>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="mt-5 flex">
             <img src="/image/Block (1).png" alt="" />
