--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 </div>
               </div>
             </div>
-            <div class="bg-gray-100 w-[200px] rounded ml-3 py-3 px-2 -mt-2">
+            <div class="bg-gray-100 w-[200px] rounded-lg ml-3 py-3 px-2 -mt-2">
               <div class="mt-2">
                 <div>
                   <h1 class="font-bold">Traffic Website</h1>
@@ -300,13 +300,64 @@
               </div>
             </div>
           </div>
-          <div class="mt-5 flex">
-            <img src="/image/Block (1).png" alt="" />
-            <div><img src="/image/Frame9.png" alt="" /></div>
+          <div class="mt-8 flex bg-gray-100 gap-[50px] w-[490px] py-4 px-4">
+            <div>
+              <h1 class="font-bold">Traffic by Device</h1>
+              <div class="flex gap-3 mt-5">
+                <h1 class="text-gray-500">30M</h1>
+                <h1 class="bg-gray-300 w-[400px] h-[1px] mt-3"></h1>
+              </div>
+              <div class="flex gap-3 mt-5">
+                <h1 class="text-gray-500">20M</h1>
+                <h1 class="bg-gray-300 w-[400px] h-[1px] mt-3"></h1>
+              </div>
+              <div class="flex gap-3 mt-5">
+                <h1 class="text-gray-500">10M</h1>
+                <h1 class="bg-gray-300 w-[400px] h-[1px] mt-3"></h1>
+              </div>
+              <div class="mt-5">
+                <h1 class="text-gray-500">0</h1>
+              </div>
+              <hr class="w-[400px] ml-5 mt-4 text-gray-500" />
+              <div class="flex gap-[20px] text-gray-500 mt-3 ml-14">
+                <h1>Linux</h1>
+                <h1>Mac</h1>
+                <h1>ios</h1>
+                <h1>Windows</h1>
+                <h1>Android</h1>
+                <h1>Other</h1>
+              </div>
+            </div>
+            <div class="bg-gray-100 p-3 rounded-lg -mt-4">
+              <h1 class="w-[300px] font-bold">Traffic by Location</h1>
+              <div class="mt-10 flex gap-4">
+                <div>
+                  <img src="/image/01.png" alt="" />
+                </div>
+                <div>
+                  <div class="flex gap-4">
+                    <h1>&#8226; United States</h1>
+                    <h1>38.6%</h1>
+                  </div>
+                  <div class="flex gap-[50px] mt-3">
+                    <h1>&#8226; Canada</h1>
+                    <h1>38.6%</h1>
+                  </div>
+                  <div class="flex gap-[50px] mt-3">
+                    <h1>&#8226; Mexico</h1>
+                    <h1>38.6%</h1>
+                  </div>
+                  <div class="flex gap-[50px] mt-3">
+                    <h1>&#8226; Other</h1>
+                    <h1>38.6%</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
-        <aside class="float-right -ml-[0.5px]">
+        <aside class="float-right -ml-[0.5px] ml-4">
           <div>
             <h1 class="font-bold">Notifications</h1>
             <div class="mt-3 flex gap-1">
