--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
           </div>
           <div
-            class="mt-3 flex gap-4 bg-gray-100 w-[620px] pl-4 py-3 rounded-lg px-2"
+            class="mt-3 flex text-[13px] gap-4 bg-gray-100 w-[620px] pl-4 py-3 rounded-lg px-2"
           >
             <div class="">
               <div class="flex gap-4 mt-5">
@@ -300,7 +300,9 @@
               </div>
             </div>
           </div>
-          <div class="mt-8 flex bg-gray-100 gap-[50px] w-[490px] py-4 px-4">
+          <div
+            class="mt-8 text-[13px] flex bg-gray-100 gap-[50px] w-[490px] py-4 px-4"
+          >
             <div>
               <h1 class="font-bold">Traffic by Device</h1>
               <div class="flex gap-3 mt-5">
