--- a/dasboard.html
+++ b/dasboard.html
@@ -3,23 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              ag: ["AG", "sans-serif"],
-            },
-          },
-        },
-      };
-    </script>
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://use.typekit.net/XXXXXXX.css" />
   </head>
-  <body class="my-5 mx-5 font-ag font-normal">
-    <div class="flex text-[12px]">
+  <body class="my-5 mx-5 font-sans">
+    <div class="flex">
       <aside>
         <div class="flex gap-2">
           <img src="/image/IconSetkk.png" alt="" />
@@ -141,240 +129,47 @@
           <div class="flex gap-1">
             <img
               src="/image/Button (6).png"
-              class="h-[20px] hover:bg-gray-500"
+              class="h-[30px] hover:bg-gray-500"
               alt=""
             />
             <img
               src="/image/Button (1).png"
-              class="h-[20px] hover:bg-gray-500"
+              class="h-[30px] hover:bg-gray-500"
               alt=""
             />
             <div class="flex gap-1">
-              <h1 class="text-gray-500">Dashboard /</h1>
+              <h1 class="text-gray-500">Dashboard</h1>
               Dafault
             </div>
             <div class="flex gap-3">
               <input
                 type="text"
-                class="ml-[200px] h-[20px] bg-gray-200 pl-2 rounded-lg"
+                class="ml-[200px] h-[30px] bg-gray-200 pl-2 rounded-lg"
                 placeholder="&#128269; search"
               />
               <img
                 src="/image/Button (2).png"
-                class="h-[20px] hover:bg-gray-500"
+                class="h-[30px] hover:bg-gray-500"
                 alt=""
               />
               <img
                 src="/image/Button (4).png"
-                class="h-[20px] hover:bg-gray-500"
+                class="h-[30px] hover:bg-gray-500"
                 alt=""
               />
               <img
                 src="/image/Button (5).png"
-                class="h-[20px] hover:bg-gray-500"
+                class="h-[30px] hover:bg-gray-500"
                 alt=""
               />
               <img
                 src="/image/Button (6).png"
-                class="h-[20px] hover:bg-gray-500"
+                class="h-[30px] hover:bg-gray-500"
                 alt=""
               />
             </div>
           </div>
-          <div
-            class="flex-1 mt-10 flex justify-start items-start relative gap-4 p-4"
-          >
-            <div class="flex justify-start items-start">
-              <select name="" id="">
-                <option value="">Today</option>
-                <option value="">Yesterday</option>
-                <option value="">Tomorrow</option>
-              </select>
-            </div>
-          </div>
-          <div class="flex gap-4">
-            <div class="bg-cyan-100 hover:bg-cyan-200 p-4 w-[190px] rounded-lg">
-              <h1 class="font-bold">Views</h1>
-              <div class="flex gap-7">
-                <h1 class="font-bold text-[27px]">721k</h1>
-                <h1 class="mt-3 text-xs">-11.01%</h1>
-              </div>
-            </div>
-            <div
-              class="bg-indigo-100 hover:bg-indigo-200 p-4 w-[190px] rounded-lg"
-            >
-              <h1 class="font-bold">Visit</h1>
-              <div class="flex gap-7">
-                <h1 class="font-bold text-[27px]">367k</h1>
-                <h1 class="mt-3 text-xs">-00.03%</h1>
-              </div>
-            </div>
-            <div class="bg-cyan-100 hover:bg-cyan-200 p-4 w-[190px] rounded-lg">
-              <h1 class="font-bold">New Users</h1>
-              <div class="flex gap-7">
-                <h1 class="font-bold text-[27px]">1,156k</h1>
-                <h1 class="mt-3 text-xs">-15.03%</h1>
-              </div>
-            </div>
-            <div
-              class="bg-indigo-100 hover:bg-indigo-200 p-4 mr-6 w-[190px] rounded-lg"
-            >
-              <h1 class="font-bold">Active Userss</h1>
-              <div class="flex gap-7">
-                <h1 class="font-bold text-[27px]">239k</h1>
-                <h1 class="mt-3">-6.08%</h1>
-              </div>
-            </div>
-          </div>
-          <div
-            class="mt-9 flex text-[13px] gap-4 bg-gray-100 w-[620px] pl-4 py-3 rounded-lg px-2"
-          >
-            <div class="">
-              <div class="flex gap-5 mt-5">
-                <h1 class="font-bold">Total Users</h1>
-                <h1 class="text-gray-500">Total Projects</h1>
-                <h1 class="text-gray-500">Operating Status &#9475;</h1>
-                <h1 class="font-semibold">&#8226; Current Week</h1>
-                <h1 class="font-semibold">&#8226; Previous Week</h1>
-              </div>
-              <div class="mt-4">
-                <div class="flex gap-3 mt-5">
-                  <h1 class="text-gray-500">30M</h1>
-                  <h1 class="bg-gray-300 w-[550px] h-[1px] mt-3"></h1>
-                </div>
-                <div class="flex gap-3 mt-5">
-                  <h1 class="text-gray-500">20M</h1>
-                  <h1 class="bg-gray-300 w-[550px] h-[1px] mt-3"></h1>
-                </div>
-                <div class="flex gap-3 mt-5">
-                  <h1 class="text-gray-500">10M</h1>
-                  <h1 class="bg-gray-300 w-[550px] h-[1px] mt-3"></h1>
-                </div>
-                <div class="mt-5">
-                  <h1 class="text-gray-500">0</h1>
-                </div>
-                <hr class="w-[540px] ml-5 mt-4 text-gray-500" />
-                <div>
-                  <div class="flex gap-[50px] text-gray-500 mt-3 ml-14">
-                    <h1>Jan</h1>
-                    <h1>Feb</h1>
-                    <h1>Mar</h1>
-                    <h1>Apr</h1>
-                    <h1>May</h1>
-                    <h1>Jun</h1>
-                    <h1>Jul</h1>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="bg-gray-100 w-[200px] rounded-lg ml-3 py-3 px-2 -mt-2">
-              <div class="mt-2">
-                <div>
-                  <h1 class="font-bold">Traffic Website</h1>
-                </div>
-
-                <div class="mt-3 flex gap-3">
-                  <h1 class="">Google</h1>
-                  <h1
-                    class="w-[100px] mt-2 bg-gray-300 h-[10px] rounded-lg"
-                  ></h1>
-                </div>
-                <div class="mt-3 flex gap-2">
-                  <h1 class="">YouTube</h1>
-                  <h1
-                    class="w-[50px] mt-2 bg-gray-300 h-[10px] rounded-lg"
-                  ></h1>
-                </div>
-                <div class="mt-3 flex gap-3">
-                  <h1 class="">Instagram</h1>
-                  <h1 class="w-[89px] mt-2 bg-black h-[10px] rounded-lg"></h1>
-                </div>
-                <div class="mt-3 flex gap-3">
-                  <h1 class="">Pinterest</h1>
-                  <h1
-                    class="w-[40px] mt-2 bg-gray-300 h-[10px] rounded-lg"
-                  ></h1>
-                </div>
-                <div class="mt-3 flex gap-3">
-                  <h1 class="">Facebook</h1>
-                  <h1
-                    class="w-[89px] mt-2 bg-gray-300 h-[10px] rounded-lg"
-                  ></h1>
-                </div>
-                <div class="mt-3 flex gap-3">
-                  <h1 class="">Twitter</h1>
-                  <h1
-                    class="w-[45px] mt-2 bg-gray-300 h-[10px] rounded-lg"
-                  ></h1>
-                </div>
-                <div class="mt-3 flex gap-3">
-                  <h1 class="">Tumbir</h1>
-                  <h1
-                    class="w-[84px] mt-2 bg-gray-300 h-[10px] rounded-lg"
-                  ></h1>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            class="mt-8 text-[13px] flex bg-gray-100 gap-[50px] w-[490px] py-4 px-4"
-          >
-            <div>
-              <h1 class="font-bold">Traffic by Device</h1>
-              <div class="flex gap-3 mt-5">
-                <h1 class="text-gray-500">30M</h1>
-                <h1 class="bg-gray-300 w-[400px] h-[1px] mt-3"></h1>
-              </div>
-              <div class="flex gap-3 mt-5">
-                <h1 class="text-gray-500">20M</h1>
-                <h1 class="bg-gray-300 w-[400px] h-[1px] mt-3"></h1>
-              </div>
-              <div class="flex gap-3 mt-5">
-                <h1 class="text-gray-500">10M</h1>
-                <h1 class="bg-gray-300 w-[400px] h-[1px] mt-3"></h1>
-              </div>
-              <div class="mt-5">
-                <h1 class="text-gray-500">0</h1>
-              </div>
-              <hr class="w-[400px] ml-5 mt-4 text-gray-500" />
-              <div class="flex gap-[20px] text-gray-500 mt-3 ml-14">
-                <h1>Linux</h1>
-                <h1>Mac</h1>
-                <h1>ios</h1>
-                <h1>Windows</h1>
-                <h1>Android</h1>
-                <h1>Other</h1>
-              </div>
-            </div>
-            <div class="bg-gray-100 p-3 rounded-lg -mt-4">
-              <h1 class="w-[280px] font-bold">Traffic by Location</h1>
-              <div class="mt-10 flex gap-4">
-                <div>
-                  <img src="/image/01.png" alt="" />
-                </div>
-                <div>
-                  <div class="flex gap-4">
-                    <h1>&#8226; United States</h1>
-                    <h1>38.6%</h1>
-                  </div>
-                  <div class="flex gap-[50px] mt-3">
-                    <h1>&#8226; Canada</h1>
-                    <h1>38.6%</h1>
-                  </div>
-                  <div class="flex gap-[50px] mt-3">
-                    <h1>&#8226; Mexico</h1>
-                    <h1>38.6%</h1>
-                  </div>
-                  <div class="flex gap-[50px] mt-3">
-                    <h1>&#8226; Other</h1>
-                    <h1>38.6%</h1>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-
         <aside class="float-right -ml-[0.5px] ml-4">
           <div>
             <h1 class="font-bold">Notifications</h1>
