--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
         <div class="mt-5 flex gap-5 text-gray-500" style="font-weight: 900">
           <h1
-            class="hover:bg-gray-500 hover:text-white w-[90px] h-[30px] p-2 rounded-lg rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
+            class="hover:bg-gray-500 hover:text-white w-[84px] h-[30px] p-2 rounded-lg rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
           >
             Favorites
           </h1>
           <h1
-            class="hover:bg-gray-500 w-[90px] h-[30px] p-2 rounded-lg hover:text-white rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
+            class="hover:bg-gray-500 w-[80px] pr-8 h-[30px] p-2 rounded-lg hover:text-white rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
           >
             Recently
           </h1>
