--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Favorites
           </h1>
           <h1
-            class="hover:bg-gray-500 w-[80px] pr-8 h-[30px] p-2 rounded-lg hover:text-white rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
+            class="hover:bg-gray-500 w-[80px] h-[30px] p-2 rounded-lg hover:text-white rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
           >
             Recently
           </h1>
@@ -447,6 +447,16 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="flex gap-[380px] -ml-2 mt-4 p-3 bg-gray-100">
+            <div class="text-slate-400 font-semibold mt-3">
+              <h1 class="text-black">Marketing & SEO</h1>
+              <h1>OPTIMIZATION AND CAMPAIGN TRACKING ACTIVE</h1>
+            </div>
+            <div class="flex gap-2 mt-3">
+              <h1 class="bg-indigo-200 rounded-2xl w-[60px] h-[15px]"></h1>
+              <h1 class="bg-gray-200 w-[60px] rounded-2xl h-[15px]"></h1>
             </div>
           </div>
         </div>
