Update layout spacing and borders

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="flex text-[12px]">
       <aside class="border-r shadow-lg">
         <div class="flex gap-2">
-          <img src="/image/IconSetkk.png" alt="" />
+          <a href="/Profile.html"><img src="/image/IconSetkk.png" alt="" /></a>
           <h1 class="font-semibold">Byewind</h1>
         </div>
 
@@ -44,12 +44,12 @@
           <h1
             class="mb-2 hover:bg-gray-200 hover:text-black w-[160px] h-[30px] p-2 rounded-lg uppercase text-slate-400 font-semibold rounded-ld"
           >
-            &#8226; Overview
+            &#8226; <a href="/dasboard.html">Overview</a>
           </h1>
           <h1
             class="hover:bg-gray-200 hover:text-black w-[160px] h-[30px] p-2 rounded-lg uppercase text-slate-400 font-semibold"
           >
-            &#8226; Projects
+            <a href="/index.html"> &#8226; Projects</a>
           </h1>
         </div>
 
@@ -62,12 +62,16 @@
         </div>
 
         <div>
-          <div class="flex gap-1 mt-3">
-            <img src="/image/IconSet (1).png" class="h-[20px] mt-1" alt="" />
+          <div class="flex gap-1 mt-3 hover:bg-gray-200 hover:text-black">
+            <img
+              src="/image/IconSet (1).png"
+              class="h-[20px] hover:bg-gray-200 hover:text-black mt-1"
+              alt=""
+            />
             <h1
-              class="mb-2 hover:bg-gray-200 hover:text-black w-[160px] h-[30px] p-2 rounded-lg uppercase text-slate-400 font-semibold rounded-ld"
+              class="mb-2 w-[160px] h-[30px] p-2 rounded-lg uppercase text-slate-400 font-semibold rounded-ld"
             >
-              <a href="/dasboard.html">Default</a>
+              Default
             </h1>
           </div>
           <div class="flex gap-1 mt-3">
@@ -113,7 +117,7 @@
             <h1
               class="mb-2 hover:bg-gray-200 hover:text-black w-[160px] h-[30px] p-2 rounded-lg uppercase text-slate-400 font-semibold rounded-ld"
             >
-              User Profile
+              <a href="/Profile.html">User Profile</a>
             </h1>
           </div>
           <div class="gap-1 ml-5 mt-3">
@@ -510,6 +514,7 @@
           </div>
           <div class="mt-3 flex gap-1">
             <img src="/img/IconSet (3).png" class="h-[20px]" alt="" />
+
             <div>
               <h1 class="w-[200px] text-gray-800">
                 You have a bug that needs...
