--- a/Profile.html
+++ b/Profile.html
@@ -27,7 +27,10 @@
           <h1 class="font-semibold">Byewind</h1>
         </div>
 
-        <div class="mt-5 flex gap-5 text-gray-500" style="font-weight: 900">
+        <div
+          class="mt-5 flex gap-5 text-gray-500 w-[240px]"
+          style="font-weight: 900"
+        >
           <h1
             class="hover:bg-gray-500 hover:text-white w-[84px] h-[30px] p-2 rounded-lg rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
           >
@@ -49,7 +52,7 @@
           <h1
             class="hover:bg-gray-200 hover:text-black w-[160px] h-[30px] p-2 rounded-lg uppercase text-slate-400 font-semibold"
           >
-            &#8226; Projects
+           <a href="/index.html"> &#8226; Projects</a>
           </h1>
         </div>
 
@@ -127,7 +130,7 @@
             <h1
               class="mb-2 hover:bg-gray-200 hover:text-black w-[160px] h-[30px] p-2 rounded-lg uppercase text-slate-400 font-semibold rounded-ld"
             >
-              Projects
+              <a href="/index.html"> Projects</a>
             </h1>
           </div>
           <div class="ml-5 gap-1 mt-3">
@@ -189,7 +192,7 @@
 
       <div class="flex">
         <!--  top navbar -->
-        <div class="p-2 -mt-3">
+        <div class="p-2 w-[1000px]">
           <div class="flex gap-1 p-2 border-b shadow-lg -ml-2">
             <div class="flex p-1">
               <img
@@ -202,35 +205,35 @@
 
             <div class="flex gap-1">
               <h1
-                class="p-2 rounded-lg rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
+                class="p-2 rounded-lg w-[130px] rounded-ld text-xs font-bold uppercase tracking-wider text-slate-400"
               >
-                Dashboard
+                Dashboard >
               </h1>
               <h1
-                class="p-2 rounded-lg rounded-ld text-xs font-bold uppercase tracking-wider"
+                class="p-2 rounded-lg w-[130px] -ml-8 rounded-ld text-xs font-bold uppercase tracking-wider"
               >
-                Default
+                User Profile
               </h1>
             </div>
             <div class="flex gap-3">
               <input
                 type="text"
-                class="ml-[170px] h-[40px] w-[210px] font-semibold bg-gray-200 pl-2 rounded-lg"
+                class="ml-[290px] h-[40px] w-[210px] font-semibold bg-gray-200 pl-2 rounded-lg"
                 placeholder="&#128269; search"
               />
               <img
                 src="/image/Button (2).png"
-                class="h-[26px] mt-2 hover:bg-gray-100"
+                class="h-[26px] mr-4 mt-2 hover:bg-gray-100"
                 alt=""
               />
               <img
                 src="/image/Button (4).png"
-                class="h-[26px] mt-2 hover:bg-gray-100"
+                class="h-[26px] mr-4 mt-2 hover:bg-gray-100"
                 alt=""
               />
               <img
                 src="/image/Button (5).png"
-                class="h-[26px] mt-2 hover:bg-gray-100"
+                class="h-[26px] mr-4 mt-2 hover:bg-gray-100"
                 alt=""
               />
               <img
@@ -240,160 +243,76 @@
               />
             </div>
           </div>
-          <div class="grid grid-cols-2 gap-3">
+          <div class="">
             <div
-              class="bg-cyan-100 hover:bg-cyan-200 p-4 w-[190px] shadow-lg rounded-lg"
-            >
-              <h1 class="text-[12px] font-semibold">Views</h1>
-              <div class="flex gap-7">
-                <h1 class="font-semibold text-[27px]">721k</h1>
-                <h1 class="mt-3 text-xs font-semibold">+11.01% &#9650;</h1>
+              class="bg-blue-400 mt-6 w-[900px] ml-5 h-[160px] p-4 w-[190px] shadow-lg rounded-3xl"
+            ></div>
+          </div>
+          <div class="flex gap-2 ml-14 -mt-9">
+            <div>
+              <img
+                src="/image/IconSetkk.png"
+                class="w-[100px] border shadow-lg"
+                alt=""
+              />
+            </div>
+            <div class="p-6">
+              <h1 class="font-semibold text-2xl">ByeWind</h1>
+              <p class="text-slate-400 font-semibold text-[16px]">
+                Full-Stack Designer • San Francisco, CA
+              </p>
+            </div>
+          </div>
+          <div
+            class="border flex p-8 gap-[100px] h-[400px] w-[300px] rounded-lg ml-5 shadow-lg -mt-[20px]"
+          >
+            <div >
+              <h1 class="font-semibold text-slate-700 text-[16px]">ABOUT</h1>
+              <p class="text-slate-400 mt-9 text-[14px] w-[200px]">
+                Product Designer specializing in UI/UX and motion design.
+                Currently building the future of internal tools at SnowUI.
+              </p>
+              <div>
+                <div class="flex gap-3 mt-9">
+                  <h1 class="text-slate-400 font-semibold text-[14px]">
+                    JOINED:
+                  </h1>
+                  <h1 class="font-semibold">June 2022</h1>
+                </div>
+                <div class="flex gap-5 mt-3">
+                  <h1 class="text-slate-400 font-semibold text-[14px]">
+                    EMAIL:
+                  </h1>
+                  <p class="font-semibold text-blue-800">bye@snowui.com</p>
+                </div>
               </div>
             </div>
-            <div
-              class="bg-indigo-100 hover:bg-indigo-200 mt-3 shadow-lg p-4 w-[190px] rounded-lg"
-            >
-              <h1 class="text-[12px] font-semibold">Visit</h1>
-              <div class="flex gap-7">
-                <h1 class="font-semibold text-[27px]">367k</h1>
-                <h1 class="mt-3 text-xs font-semibold">-00.03% &#9660;</h1>
-              </div>
-            </div>
-            <div
-              class="bg-cyan-100 hover:bg-cyan-200 p-4 shadow-lg w-[190px] rounded-lg"
-            >
-              <h1 class="text-[12px] font-semibold">New Users</h1>
-              <div class="flex gap-3 w-[180px]">
-                <h1 class="font-semibold text-[27px]">1,156k</h1>
-                <h1 class="mt-3 text-xs font-semibold">+15.03% &#9650;</h1>
-              </div>
-            </div>
-            <div
-              class="bg-indigo-100 hover:bg-indigo-200 shadow-lg p-4 mr-6 w-[190px] rounded-lg"
-            >
-              <h1 class="text-[12px] font-semibold">Active Userss</h1>
-              <div class="flex gap-7">
-                <h1 class="font-semibold text-[27px]">239k</h1>
-                <h1 class="mt-3 font-semibold">-6.08% &#9660;</h1>
+            <div class="">
+              <h1 class="font-semibold p-5 text-slate-700 text-[16px]">FEED</h1>
+              <div>
+                <div class="hover:bg-neutral-300 rounded-3xl p-5">
+                  <h1 class="text-slate-800 text-[14px] w-[400px] h-[20px]">
+                    Just released the new project dashboard kit! 🎨
+                  </h1>
+                  <p class="mt-2 font-semibold text-slate-400">2H AGO</p>
+                </div>
+
+                <div class="hover:bg-neutral-300 rounded-3xl p-5">
+                  <h1 class="text-slate-800 text-[14px] w-[400px] h-[20px]">
+                    Reached 10k followers on Dribbble today! 🎉
+                  </h1>
+                  <p class="mt-2 font-semibold text-slate-400">1D AGO</p>
+                </div>
+                <div class="hover:bg-neutral-300 rounded-3xl p-5">
+                <div >
+                  <h1 class="text-slate-800 text-[14px] w-[400px] h-[20px]">What are your favorite React icon libraries?</h1>
+                  <p class="mt-2 font-semibold text-slate-400">3D AGO</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-      <aside
-        class="float-right border-l font-semibold shadow-lg p-4 -ml-[0.5px] -ml-[10px]"
-      >
-        <div>
-          <h1
-            class="font-semibold text-[13px] p-2 rounded-lg rounded-ld text-xs font-bold uppercase tracking-wider"
-          >
-            Notifications
-          </h1>
-          <div class="mt-3 flex gap-1">
-            <img src="/img/IconSet (1).png" class="h-[20px]" alt="" />
-            <div class="ml-1">
-              <h1 class="w-[200px] text-gray-800">
-                You have a bug that needs...
-              </h1>
-              <p class="text-[12px] text-gray-500">just now</p>
-            </div>
-          </div>
-          <div class="mt-3 flex gap-1">
-            <img src="/img/IconSet.png" class="h-[20px]" alt="" />
-            <div class="ml-1">
-              <h1 class="w-[200px] text-gray-800">New user registered</h1>
-              <p class="text-[12px] text-gray-500">just now</p>
-            </div>
-          </div>
-          <div class="mt-3 flex gap-1">
-            <img src="/img/IconSet (1).png" class="h-[20px]" alt="" />
-            <div>
-              <h1 class="w-[200px] text-gray-800">
-                You have a bug that needs...
-              </h1>
-              <p class="text-[12px] text-gray-500">just now</p>
-            </div>
-          </div>
-          <div class="mt-3 flex gap-1">
-            <img src="/img/IconSet (2).png" class="h-[20px]" alt="" />
-            <div>
-              <h1 class="w-[200px] text-gray-800">
-                Andi lane subscribed to you
-              </h1>
-              <p class="text-[12px] text-gray-500">just now</p>
-            </div>
-          </div>
-        </div>
-        <div class="mt-14">
-          <h1 class="text-[13px]">Activities</h1>
-        </div>
-        <div class="mt-3 flex gap-1">
-          <img src="/img/IconSet (3).png" class="h-[20px]" alt="" />
-          <div>
-            <h1 class="w-[200px] text-gray-800">
-              You have a bug that needs...
-            </h1>
-            <p class="text-[12px] text-gray-500">just now</p>
-          </div>
-        </div>
-        <div class="mt-3 flex gap-1">
-          <img src="/img/IconSet (4).png" class="h-[20px]" alt="" />
-          <div>
-            <h1 class="w-[200px] text-gray-800">Released a new version</h1>
-            <p class="text-[12px] text-gray-500">59 minutes ago</p>
-          </div>
-        </div>
-        <div class="mt-3 flex gap-1">
-          <img src="/img/IconSet (5).png" class="h-[20px]" alt="" />
-          <div>
-            <h1 class="w-[200px] text-gray-800">Submitted a bug</h1>
-            <p class="text-[12px] text-gray-500">12 hours ago</p>
-          </div>
-        </div>
-        <div class="mt-3 flex gap-1">
-          <img src="/img/IconSet (6).png" class="h-[20px]" alt="" />
-          <div>
-            <h1 class="w-[200px] text-gray-800">Mdified A data in Page X</h1>
-            <p class="text-[12px] text-gray-500">Today 11:59 AM</p>
-          </div>
-        </div>
-        <div class="mt-3 flex gap-1">
-          <img src="/img/IconSet (7).png" class="h-[20px]" alt="" />
-          <div>
-            <h1 class="w-[200px] text-gray-800">Deleted a page in Project X</h1>
-            <p class="text-[12px] text-gray-500">Feb 2 2023</p>
-          </div>
-        </div>
-
-        <div class="mt-10 mb-3">
-          <h1 class="font-bold">Contacts</h1>
-        </div>
-        <div class="flex gap-2">
-          <img src="/img/IconSet (8).png" alt="" />
-          <h1>Natali Croig</h1>
-        </div>
-        <div class="flex gap-2 mt-3">
-          <img src="/img/IconSet (9).png" alt="" />
-          <h1>Drew Cono</h1>
-        </div>
-        <div class="flex gap-2 mt-3">
-          <img src="/img/IconSet (10).png" alt="" />
-          <h1>Orlando Diggs</h1>
-        </div>
-        <div class="flex gap-2 mt-3">
-          <img src="/img/IconSet (11).png" alt="" />
-          <h1>Andi Lane</h1>
-        </div>
-        <div class="flex gap-2 mt-3">
-          <img src="/img/IconSet (12).png" alt="" />
-          <h1>Kate Morrison</h1>
-        </div>
-        <div class="flex gap-2 mt-3">
-          <img src="/img/IconSet (13).png" alt="" />
-          <h1>Karay Okumus</h1>
-        </div>
-      </aside>
     </div>
   </body>
 </html>
